<resources>
    <string name="app_name">AI Main</string>
    <string name="join">Join</string>
    <string name="leave">Leave</string>
    <string name="enable_video">Enable Video</string>
    <string name="disable_video">Disable Video</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="add_watermark">Add Watermark</string>
    <string name="clear_watermark">Clear Watermark</string>
    <string name="enable_audio">Enable Audio</string>
    <string name="disable_audio">Disable Audio</string>
    <string name="send_stream_message">Send Stream Message</string>
    <string name="send_audio_metadata">Send Audio metadata</string>
    <string name="send_rtm_message">Send Rtm Message</string>
    <string name="send_yuv">Send Yuv</string>
    <string name="clear">Clear</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="params">Params</string>
    <string name="audio_profile">AudioProfile</string>
    <string name="audio_scenario">AudioScenario</string>
    <string name="codec_type">CodecType</string>
    <string name="enable_rtm">Enable Rtm</string>
    <string name="enable_stereo_test">Enable Stereo Test</string>
    <string name="enable_save_audio">Enable Save Audio</string>
    <string name="channel_name">Channel Name</string>
    <string name="enable_rtc_data_stream_test">Enable Rtc Data Stream Loop Send Test</string>
    <string name="enable_rtc_audio_meta_data_test">Enable Rtc AudioMeta Loop Send Test</string>
    <string name="enable_rtm_message_test">Enable Rtm Message Loop Send Test</string>
    <string name="enable_push_external_video">Enable Push External Video</string>
    <string name="enable_encryption">Enable Encryption</string>
    <string name="enable_pull_audio_frame">Enable Pull Audio Frame</string>
    <string name="enable_send_video_metadata">Enable Send Video Metadata</string>
    <string name="enable_leave_channel_without_destroy">Enable Leave Channel Without Destroy</string>
    <string name="enable_custom_direct_audio_tracker">Enable Custom Direct Audio Tracker</string>
    <string name="enable_write_recording_audio_frame">Enable Write Recording Audio Frame</string>
    <string name="enable_delay_playback">Enable Delay Playback</string>
    <string name="client_role_type">Role</string>
    <string name="client_role_type_broadcaster">Broadcaster</string>
    <string name="client_role_type_audience">Audience</string>
    <string name="app_id">APP ID</string>
    <string name="rtc_token">Rtc Token</string>
    <string name="app_certificate">APP CERTIFICATE</string>
    <string name="manual_input">Manual Input</string>
    <string name="select_app_id">Select App ID</string>
    <string name="go">GO</string>
    <string name="video_encoder_width">Video Width</string>
    <string name="video_encoder_height">Video Height</string>
    <string name="switch_video_stream">Switch Stream</string>
    <string name="set_low_stream">Set Low Stream</string>
    <string name="set_high_stream">Set High Stream</string>
    <string name="switch_remote_user">Switch Remote</string>
</resources>