<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border_dialog">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toTopOf="@id/ok_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/config_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/client_role_type_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/client_role_type"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioGroup
                    android:id="@+id/client_role_type_rg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toEndOf="@id/client_role_type_tv"
                    app:layout_constraintTop_toTopOf="parent">

                    <RadioButton
                        android:id="@+id/client_role_type_broadcaster_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/client_role_type_broadcaster" />

                    <RadioButton
                        android:id="@+id/client_role_type_audience_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/client_role_type_audience" />
                </RadioGroup>

                <CheckBox
                    android:id="@+id/enable_rtm_cb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enable_rtm"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/client_role_type_tv" />

                <CheckBox
                    android:id="@+id/enable_stereo_test_cb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enable_stereo_test"
                    android:textSize="15sp"
                    app:layout_constraintStart_toEndOf="@id/enable_rtm_cb"
                    app:layout_constraintTop_toBottomOf="@id/client_role_type_tv" />

                <CheckBox
                    android:id="@+id/enable_save_audio_cb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enable_save_audio"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/enable_rtm_cb" />

                <CheckBox
                    android:id="@+id/enable_rtc_data_stream_test_cb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enable_rtc_data_stream_test"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/enable_save_audio_cb" />

                <CheckBox
                    android:id="@+id/enable_rtc_audio_meta_data_test_cb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enable_rtc_audio_meta_data_test"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/enable_rtc_data_stream_test_cb" />

                <CheckBox
                    android:id="@+id/enable_rtm_message_test_cb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enable_rtm_message_test"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/enable_rtc_audio_meta_data_test_cb" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/params_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/params"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/config_layout" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/params_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/item_layout_bg"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/params_title_tv">

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/audio_profile_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/audio_profile"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/params_layout" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/audio_profile_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/item_layout_bg"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/audio_profile_title_tv">

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/audio_scenario_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/audio_scenario"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/audio_profile_layout" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/audio_scenario_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/item_layout_bg"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/audio_scenario_title_tv">

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/ok_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button_background"
        android:text="@string/ok"
        android:textColor="@drawable/button_text_color"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
